Back-end for T&C Profiles abd other bug fixes

--- a/SmartMoveWebApp/Content/style.css
+++ b/SmartMoveWebApp/Content/style.css
@@ -2364,6 +2364,10 @@ body,
     color: red;
 }
 
+.field-validation-error {
+    color: red;
+}
+
 /*==============================
     Customer Layout Side Menu Bar Css
 ================================*/
