--- a/SmartMoveWebApp/Views/Home/Login.cshtml
+++ b/SmartMoveWebApp/Views/Home/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Login - Home";
+    ViewBag.Title = "Select Login";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <!--== Sign In Area Start ==-->
