--- a/SmartMoveWebApp/Views/Customers/Login.cshtml
+++ b/SmartMoveWebApp/Views/Customers/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SmartMoveWebApp.Models.ViewModels.LoginViewModel
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Customer Login";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
