--- a/SmartMoveWebApp/Views/Customers/MyTrips.cshtml
+++ b/SmartMoveWebApp/Views/Customers/MyTrips.cshtml
@@ -1,7 +1,7 @@
-﻿
+﻿@model IEnumerable<Order>
 @{
-    ViewBag.Title = "MyTrips";
-    Layout = "~/Views/Shared/_UsersLayout.cshtml";
+    ViewBag.Title = "My Trips";
+    Layout = "~/Views/Shared/_CustomersLayout.cshtml";
 }
 
 
@@ -22,7 +22,27 @@
                                 <th>Drop</th>
                                 <th>Ratings</th>
                             </tr>
-                        </table>
+                            @if (Model.Count() == 0)
+                            {
+                                <tr>
+                                    <td colspan="6">No Past / Current Orders Found.</td>
+                                </tr>
+                            }
+                            else
+                            {
+                                foreach (Order order in Model)
+                                {
+                                <tr>
+                                    <td>@order.PickupLat</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td>@order.TruckTypeId</td>
+                                    <td>@order.DropLat</td>
+                                    <td></td>
+                                </tr>
+                                }
+                            }
+                            </table>
                     </div>
                 </div>
             </div>
@@ -31,3 +51,12 @@
     </div>
 </div>
 <!-- My Trips Content End -->
+
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('#myMenu.nav.nav-tabs li.nav-item.active').removeClass('active');
+            $("#menu_item_1").parent("li").addClass('active');
+        });
+    </script>
+}
