--- a/SmartMoveWebApp/Views/Customers/Share.cshtml
+++ b/SmartMoveWebApp/Views/Customers/Share.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Share";
-    Layout = "~/Views/Shared/_UsersLayout.cshtml";
+    Layout = "~/Views/Shared/_CustomersLayout.cshtml";
 }
 
 <!-- Share Content start -->
@@ -49,3 +49,11 @@
     </div>
 </div>
 <!-- Share Content End -->
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('#myMenu.nav.nav-tabs li.nav-item.active').removeClass('active');
+            $("#menu_item_4").parent("li").addClass('active');
+        });
+    </script>
+}
