--- a/SmartMoveWebApp/Views/TruckOwners/BecomeDriver.cshtml
+++ b/SmartMoveWebApp/Views/TruckOwners/BecomeDriver.cshtml
@@ -21,76 +21,98 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First Name" })
+                                            @*@Html.ValidationMessageFor(m => m.FirstName)*@
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Last Name" })
+                                            @*@Html.ValidationMessageFor(m => m.LastName)*@
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="username">
-                                <div class="form-group">
-                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email id" })
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email id" })
+                                        @*@Html.ValidationMessageFor(m => m.Email)*@
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.Phone, new { @class = "form-control", placeholder = "Phone Number" })
+                                        @*@Html.ValidationMessageFor(m => m.Phone)*@
+                                    </div>
                                 </div>
                             </div>
-                            <div class="username">
-                                <div class="form-group">
-                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password" })
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password" })
+                                        @*@Html.ValidationMessageFor(m => m.Password)*@
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password" })
+                                        @*@Html.ValidationMessageFor(m => m.ConfirmPassword)*@
+                                    </div>
                                 </div>
                             </div>
-                            <div class="username">
-                                <div class="form-group">
-                                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password" })
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.Address1, new { @class = "form-control", placeholder = "Address Line 1" })
+                                        @*@Html.ValidationMessageFor(m => m.Address1)*@
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="username">
-                                <div class="form-group">
-                                    @Html.TextBoxFor(m => m.Phone, new { @class = "form-control", placeholder = "Phone Number" })
-                                </div>
-                            </div>
-                            <div class="username">
-                                <div class="form-group">
-                                    @Html.TextBoxFor(m => m.Address1, new { @class = "form-control", placeholder = "Address Line 1" })
-                                </div>
-                            </div>
-                            <div class="username">
-                                <div class="form-group">
-                                    @Html.TextBoxFor(m => m.Address2, new { @class = "form-control", placeholder = "Address Line 2" })
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.Address2, new { @class = "form-control", placeholder = "Address Line 2" })
+                                        @*@Html.ValidationMessageFor(m => m.Address2)*@
+                                    </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         @Html.TextBoxFor(m => m.ZipCode, new { @class = "form-control", placeholder = "Zip Code" })
+                                        @*@Html.ValidationMessageFor(m => m.ZipCode)*@
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         @Html.TextBoxFor(m => m.City, new { @class = "form-control", placeholder = "City" })
+                                        @*@Html.ValidationMessageFor(m => m.City)*@
                                     </div>
                                 </div>
                             </div>
-                            <div class="username">
-                                <div class="form-group">
-                                    @Html.TextBoxFor(m => m.State, new { @class = "form-control", placeholder = "State" })
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.State, new { @class = "form-control", placeholder = "State" })
+                                        @*@Html.ValidationMessageFor(m => m.State)*@
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="username">
-                                <div class="form-group">
-                                    @Html.DropDownListFor(m => m.TruckTypeId, Model.TruckTypes, new { @class = "form-control" })
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        @Html.DropDownListFor(m => m.TruckTypeId, Model.TruckTypes, new { @class = "form-control" })
+                                        @*@Html.ValidationMessageFor(m => m.TruckTypeId)*@
+                                    </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         @Html.TextBoxFor(m => m.TruckMake, new { @class = "form-control", placeholder = "Truck Make" })
+                                        @*@Html.ValidationMessageFor(m => m.TruckMake)*@
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         @Html.TextBoxFor(m => m.TruckModel, new { @class = "form-control", placeholder = "Truck Model" })
+                                        @*@Html.ValidationMessageFor(m => m.TruckModel)*@
                                     </div>
                                 </div>
                             </div>
@@ -98,11 +120,13 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         @Html.TextBoxFor(m => m.TruckYear, new { @class = "form-control", placeholder = "Truck Year" })
+                                        @*@Html.ValidationMessageFor(m => m.TruckYear)*@
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         @Html.TextBoxFor(m => m.LicensePlate, new { @class = "form-control", placeholder = "License Plate" })
+                                        @*@Html.ValidationMessageFor(m => m.LicensePlate)*@
                                     </div>
                                 </div>
                             </div>
@@ -110,36 +134,35 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         @Html.TextBoxFor(m => m.TruckColor, new { @class = "form-control", placeholder = "Truck Color" })
+                                        @*@Html.ValidationMessageFor(m => m.TruckColor)*@
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         @Html.TextBoxFor(m => m.DriverLicenseNumber, new { @class = "form-control", placeholder = "Driver License #" })
+                                        @*@Html.ValidationMessageFor(m => m.DriverLicenseNumber)*@
                                     </div>
                                 </div>
                             </div>
-                            <div class="username">
-                                <div class="form-group">
-                                    @Html.TextBoxFor(m => m.VehicleRegNumber, new { @class = "form-control", placeholder = "Vehicle Registration Number" })
-                                </div>
-                            </div>
-                            <div class="username">
-                                <div class="form-group">
-                                    @Html.TextBoxFor(m => m.DriverInsurancePolicy, new { @class = "form-control", placeholder = "Driver Insurance Policy Number" })
-                                </div>
-                            </div>
-                            <div class="username text-center">
-                                <div class="row">
-                                    <div class="log-btn col-lg-4">
-                                        <button type="submit"><i class="fa fa-check-square"></i> Sign Up</button>
-                                    </div>
-                                </div>
-                            </div>
-                            @*<div class="log-btn">
+                            <div class="row">
+                                <div class="col-md-6">
                                     <div class="form-group">
-                                        <button type="submit" class="btn btn-default">Sign up</button>
+                                        @Html.TextBoxFor(m => m.VehicleRegNumber, new { @class = "form-control", placeholder = "Vehicle Registration Number" })
+                                        @*@Html.ValidationMessageFor(m => m.VehicleRegNumber)*@
                                     </div>
-                                </div>*@
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.DriverInsurancePolicy, new { @class = "form-control", placeholder = "Driver Insurance Policy Number" })
+                                        @*@Html.ValidationMessageFor(m => m.DriverInsurancePolicy)*@
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="log-btn">
+                                <div class="form-group">
+                                    <button type="submit" class="btn btn-default">Sign up</button>
+                                </div>
+                            </div>
                         }
                     </div>
                     <div class="create-ac">
