--- a/SmartMoveWebApp/Views/TruckOwners/Dashboard.cshtml
+++ b/SmartMoveWebApp/Views/TruckOwners/Dashboard.cshtml
@@ -1,7 +1,7 @@
-﻿
+﻿@model SmartMoveWebApp.TruckOwner
 @{
-    ViewBag.Title = "Homepage";
-    Layout = "~/Views/Shared/_UsersLayout.cshtml";
+    ViewBag.Title = "Driver Dashboard";
+    Layout = "~/Views/Shared/_TruckOwnersLayout.cshtml";
 }
 
 <!-- Dashboard Content start -->
@@ -21,59 +21,42 @@
                                 <h5>Name</h5>
                             </div>
                             <div class="col-lg-4">
-                                <p>Pinal Vaghasiya</p>
+                                <p>@Model.FirstName @Model.LastName</p>
                             </div>
-                            <div class="col-lg-2">
-                                <h5>Location</h5>
-                            </div>
-                            <div class="col-lg-4">
-                                <p>United States</p>
-                            </div>
-                        </div>
-                        <div class="row col-lg-12 text-left profile-title">
                             <div class="col-lg-2">
                                 <h5>Email</h5>
                             </div>
                             <div class="col-lg-4">
-                                <p>admin.admin@gmail.com</p>
-                            </div>
-                            <div class="col-lg-2">
-                                <h5>Password</h5>
-                            </div>
-                            <div class="col-lg-4">
-                                <p>********</p>
+                                <p>@Model.Email</p>
                             </div>
                         </div>
                         <div class="row col-lg-12 text-left profile-title">
                             <div class="col-lg-2">
-                                <h5>Profile Photo</h5>
+                                <h5>Phone</h5>
                             </div>
                             <div class="col-lg-4">
-                                <div class="team-mem-icon">
-                                    <img src="~/Content/images/team/team-mem-thumb-2.png" />
-                                </div>
+                                <p>@Model.Phone</p>
                             </div>
-                            <div class="col-lg-2">
-                                <h5>Mobile</h5>
-                            </div>
-                            <div class="col-lg-4">
-                                <p>United States +1</p>
-                                <p>8582659445</p>
-                            </div>
-                        </div>
-                        <div class="row col-lg-12 text-left profile-title" style="border-bottom: 0;">
                             <div class="col-lg-2">
                                 <h5>Address</h5>
                             </div>
                             <div class="col-lg-4">
-                                <p>3678 Aero Ct, San Diego</p>
+                                <span>@Model.Address1</span><br />
+                                <span>@Model.Address2</span>
                             </div>
+                        </div>
+                        <div class="row col-lg-12 text-left profile-title">
                             <div class="col-lg-2">
-                                <h5>Mobile</h5>
+                                <h5>Zip Code</h5>
                             </div>
                             <div class="col-lg-4">
-                                <p>United States +1</p>
-                                <p>8582659445</p>
+                                <p>@Model.City, @Model.ZipCode</p>
+                            </div>
+                            <div class="col-lg-2">
+                                <h5>State</h5>
+                            </div>
+                            <div class="col-lg-4">
+                                <p>@Model.State</p>
                             </div>
                         </div>
                     </div>
@@ -84,3 +67,11 @@
     </div>
 </div>
 <!-- Dashboard Content End -->
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('#myMenu.nav.nav-tabs li.nav-item.active').removeClass('active');
+            $("#menu_item_2").parent("li").addClass('active');
+        });
+    </script>
+}
