--- a/SmartMoveWebApp/Views/TruckOwners/Index.cshtml
+++ b/SmartMoveWebApp/Views/TruckOwners/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SmartMoveWebApp.TruckOwner
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_TruckOwnersLayout.cshtml";
 }
 
 <div class="jumbotron">
