--- a/SmartMoveWebApp/Views/TruckOwners/Trips.cshtml
+++ b/SmartMoveWebApp/Views/TruckOwners/Trips.cshtml
@@ -1,7 +1,7 @@
-﻿
+﻿@model IEnumerable<OrderBid>
 @{
-    ViewBag.Title = "Trips";
-    Layout = "~/Views/Shared/_UsersLayout.cshtml";
+    ViewBag.Title = "My Trips";
+    Layout = "~/Views/Shared/_TruckOwnersLayout.cshtml";
 }
 
 <!-- My Trips Content start -->
@@ -21,6 +21,27 @@
                                 <th>Amount</th>
                                 <th>Ratings</th>
                             </tr>
+                            @if (Model.Count() == 0)
+                            {
+                                <tr>
+                                    <td colspan="6">No Past / Current Orders Found.</td>
+                                </tr>
+                            }
+                            else
+                            {
+                                foreach (OrderBid orderBid in Model)
+                                {
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td>@orderBid.NumberOfTrips</td>
+                                        <td>@orderBid.BidAmount</td>
+                                        <td></td>
+                                    </tr>
+                                }
+                            }
+
                         </table>
                     </div>
                 </div>
@@ -30,3 +51,11 @@
     </div>
 </div>
 <!-- My Trips Content End -->
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('#myMenu.nav.nav-tabs li.nav-item.active').removeClass('active');
+            $("#menu_item_1").parent("li").addClass('active');
+        });
+    </script>
+}
