--- a/SmartMoveWebApp/Views/Home/Contact.cshtml
+++ b/SmartMoveWebApp/Views/Home/Contact.cshtml
@@ -72,3 +72,12 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3353.36528143936!2d-117.14978140544098!3d32.809085137415856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dbffdd7553b7e5%3A0x648e2461658371d0!2sNational+University+-+Kearny+Mesa%2C+California!5e0!3m2!1sen!2sus!4v1536283105892"></iframe>
 </div>
 <!--== Map Area End ==-->
+@section  Scripts
+{
+    <script>
+        $(document).ready(function(){
+            $('nav.mainmenu ul li.active').removeClass('active');
+            $("#contactLink").addClass('active');
+        });
+    </script>
+}
