--- a/SmartMoveWebApp/Views/Home/Index.cshtml
+++ b/SmartMoveWebApp/Views/Home/Index.cshtml
@@ -18,6 +18,10 @@
                             <div class="slider-right-text">
                                 <h1>BOOK YOUR SERVICE TODAY!</h1>
                                 <p>24*7 On Demand PickUp and Delivery</p>
+                                <div class="about-btn">
+                                    <a href="@Url.Action("BecomeDriver", "TruckOwners")">Become a Driver</a>
+                                    <a href="@Url.Action("Register", "Customers")">Become a Customer</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -52,7 +56,7 @@
 
                             <p>SmartMove works according to the needs and requirement of the customers who request services and who accept a bids and provides to them data to make contact with qualified truck owners (and drivers) who provide the desired results. SmartMove makes sure that all goods remain in a safe condition during transit and they will be delivered safely at their destination.</p>
                             <div class="about-btn">
-                                <a href="#">Book Your Service</a>
+                                <a href="@Url.Action("Login", "Customers")">Book Your Service</a>
                                 <a href="@Url.Action("Contact", "Home")">Contact Us</a>
                             </div>
                         </div>
