--- a/SmartMoveWebApp/Views/Shared/_Layout.cshtml
+++ b/SmartMoveWebApp/Views/Shared/_Layout.cshtml
@@ -36,12 +36,12 @@
                     <div class="col-lg-10 d-none d-xl-block">
                         <nav class="mainmenu alignright">
                             <ul>
-                                <li class="active">@Html.ActionLink("Home", "Index", "Home")</li>
-                                <li>@Html.ActionLink("About", "About", "Home")</li>
-                                <li>@Html.ActionLink("Help", "Help", "Home")</li>
-                                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                                <li>@Html.ActionLink("Become a Driver", "BecomeDriver", "TruckOwners")</li>
-                                <li>@Html.ActionLink("Sign In", "Login", "Home")</li>
+                                <li class="active" id="homeLink">@Html.ActionLink("Home", "Index", "Home")</li>
+                                <li id="aboutLink">@Html.ActionLink("About", "About", "Home")</li>
+                                <li id="helpLink">@Html.ActionLink("Help", "Help", "Home")</li>
+                                <li id="contactLink">@Html.ActionLink("Contact Us", "Contact", "Home")</li>
+                                <li id="becomeDriverLink">@Html.ActionLink("Become a Driver", "BecomeDriver", "TruckOwners")</li>
+                                <li id="signinLink">@Html.ActionLink("Sign In", "Login", "Home")</li>
                             </ul>
                         </nav>
                     </div>
