--- a/SmartMoveWebApp/Views/TruckOwners/Dashboard.cshtml
+++ b/SmartMoveWebApp/Views/TruckOwners/Dashboard.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartMoveWebApp.TruckOwner
+﻿@model SmartMoveWebApp.Models.ViewModels.EditDriverProfileViewModel
 @{
     ViewBag.Title = "Driver Dashboard";
     Layout = "~/Views/Shared/_TruckOwnersLayout.cshtml";
@@ -12,22 +12,23 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="team-member-info">
+                        <a href="@Url.Action("EditProfile", "TruckOwners")" class="btn btn-info" style="float:right">Edit Profile</a>
                         <h4 class="text-center">Profile</h4>
                         <div class="row col-lg-12 profile-title">
                             <h4>General Information</h4>
                         </div>
                         <div class="row col-lg-12 text-left profile-title">
                             <div class="col-lg-2">
-                                <h5>Name</h5>
+                                <h5>First Name</h5>
                             </div>
                             <div class="col-lg-4">
-                                <p>@Model.FirstName @Model.LastName</p>
+                                <p>@Model.FirstName</p>
                             </div>
                             <div class="col-lg-2">
-                                <h5>Email</h5>
+                                <h5>Last name</h5>
                             </div>
                             <div class="col-lg-4">
-                                <p>@Model.Email</p>
+                                <p>@Model.LastName</p>
                             </div>
                         </div>
                         <div class="row col-lg-12 text-left profile-title">
@@ -50,13 +51,83 @@
                                 <h5>Zip Code</h5>
                             </div>
                             <div class="col-lg-4">
-                                <p>@Model.City, @Model.ZipCode</p>
+                                <p>@Model.ZipCode</p>
                             </div>
+                            <div class="col-lg-2">
+                                <h5>City</h5>
+                            </div>
+                            <div class="col-lg-4">
+                                <p>@Model.City</p>
+                            </div>
+                        </div>
+                        <div class="row col-lg-12 text-left profile-title">
                             <div class="col-lg-2">
                                 <h5>State</h5>
                             </div>
                             <div class="col-lg-4">
                                 <p>@Model.State</p>
+                            </div>
+                            <div class="col-lg-2">
+                                <h5>Truck Type</h5>
+                            </div>
+                            <div class="col-lg-4">
+                                <p>@ViewBag.TruckType</p>
+                            </div>
+                        </div>
+                        <div class="row col-lg-12 text-left profile-title">
+                            <div class="col-lg-2">
+                                <h5>Truck Make</h5>
+                            </div>
+                            <div class="col-lg-4">
+                                <p>@Model.TruckMake</p>
+                            </div>
+                            <div class="col-lg-2">
+                                <h5>Truck Model</h5>
+                            </div>
+                            <div class="col-lg-4">
+                                <p>@Model.TruckModel</p>
+                            </div>
+                        </div>
+                        <div class="row col-lg-12 text-left profile-title">
+                            <div class="col-lg-2">
+                                <h5>Truck Year</h5>
+                            </div>
+                            <div class="col-lg-4">
+                                <p>@Model.TruckYear</p>
+                            </div>
+                            <div class="col-lg-2">
+                                <h5>Truck License Plate</h5>
+                            </div>
+                            <div class="col-lg-4">
+                                <p>@Model.LicensePlate</p>
+                            </div>
+                        </div>
+                        <div class="row col-lg-12 text-left profile-title">
+                            <div class="col-lg-2">
+                                <h5>Truck Color</h5>
+                            </div>
+                            <div class="col-lg-4">
+                                <p>@Model.TruckColor</p>
+                            </div>
+                            <div class="col-lg-2">
+                                <h5>Driver License Number</h5>
+                            </div>
+                            <div class="col-lg-4">
+                                <p>@Model.DriverLicenseNumber</p>
+                            </div>
+                        </div>
+                        <div class="row col-lg-12 text-left profile-title">
+                            <div class="col-lg-2">
+                                <h5>Vehicle Registration Number</h5>
+                            </div>
+                            <div class="col-lg-4">
+                                <p>@Model.VehicleRegNumber</p>
+                            </div>
+                            <div class="col-lg-2">
+                                <h5>Driver Insurance Policy Number</h5>
+                            </div>
+                            <div class="col-lg-4">
+                                <p>@Model.DriverInsurancePolicy</p>
                             </div>
                         </div>
                     </div>
