--- a/SmartMoveWebApp/Views/TruckOwners/EditProfile.cshtml
+++ b/SmartMoveWebApp/Views/TruckOwners/EditProfile.cshtml
@@ -1,31 +1,36 @@
-﻿@model SmartMoveWebApp.Models.ViewModels.RegisterDriverViewModel
+﻿@model SmartMoveWebApp.Models.ViewModels.EditDriverProfileViewModel
 @{
-    ViewBag.Title = "Become a Driver";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Edit Driver Profile";
+    Layout = "~/Views/Shared/_TruckOwnersLayout.cshtml";
 }
 
-<!--== Become Driver Content Start ==-->
-<section id="login-page-wrap" class="section-padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 m-auto">
-                <div class="login-page-content">
-                    <div class="login-form">
-                        <h3>Become A Driver</h3>
-                        <h6>Note: Required fields are marked with *</h6>
-                        @using (Html.BeginForm("RegisterDriver", "TruckOwners"))
+<!--== Edit Profile Content Start ==-->
+<div class="col-lg-9">
+    <div class="tab-content" id="myTabContent">
+        <!-- Dashboard  start -->
+        <div class="tab-pane fade show active" id="team_member_1" role="tabpanel" aria-labelledby="tab_item_1">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="team-member-info">
+                        <h3 class="text-center">Edit Your Driver Profile</h3>
+                        <h6 class="text-center">Note: Required fields are marked with <span style="color:red">*</span></h6>
+                        <hr />
+                        @using (Html.BeginForm("EditProfile", "TruckOwners"))
                         {
                             @Html.AntiForgeryToken()
+                            @Html.HiddenFor(m => m.TruckOwnerId)
                             <div class="name">
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
+                                            @Html.LabelFor(m => m.FirstName)<span style="color:red">*</span>
                                             @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First Name *" })
                                             @Html.ValidationMessageFor(m => m.FirstName)
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
+                                            @Html.LabelFor(m => m.LastName)<span style="color:red">*</span>
                                             @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Last Name *" })
                                             @Html.ValidationMessageFor(m => m.LastName)
                                         </div>
@@ -35,40 +40,25 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email id *" })
-                                        @Html.ValidationMessageFor(m => m.Email)
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
+                                        @Html.LabelFor(m => m.Phone)<span style="color:red">*</span>
                                         @Html.TextBoxFor(m => m.Phone, new { @class = "form-control", placeholder = "Phone Number *" })
                                         @Html.ValidationMessageFor(m => m.Phone)
                                     </div>
                                 </div>
-                            </div>
-                            <div class="row">
                                 <div class="col-md-6">
-                                    <div class="form-group">
-                                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password *" })
-                                        @Html.ValidationMessageFor(m => m.Password)
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password *" })
-                                        @Html.ValidationMessageFor(m => m.ConfirmPassword)
-                                    </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        @Html.LabelFor(m => m.Address1)<span style="color:red">*</span>
                                         @Html.TextBoxFor(m => m.Address1, new { @class = "form-control", placeholder = "Address Line 1 *" })
                                         @Html.ValidationMessageFor(m => m.Address1)
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        @Html.LabelFor(m => m.Address2)
                                         @Html.TextBoxFor(m => m.Address2, new { @class = "form-control", placeholder = "Address Line 2" })
                                         @Html.ValidationMessageFor(m => m.Address2)
                                     </div>
@@ -77,12 +67,14 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        @Html.LabelFor(m => m.ZipCode)<span style="color:red">*</span>
                                         @Html.TextBoxFor(m => m.ZipCode, new { @class = "form-control", placeholder = "Zip Code *" })
                                         @Html.ValidationMessageFor(m => m.ZipCode)
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        @Html.LabelFor(m => m.City)<span style="color:red">*</span>
                                         @Html.TextBoxFor(m => m.City, new { @class = "form-control", placeholder = "City *" })
                                         @Html.ValidationMessageFor(m => m.City)
                                     </div>
@@ -91,12 +83,14 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        @Html.LabelFor(m => m.State)<span style="color:red">*</span>
                                         @Html.TextBoxFor(m => m.State, new { @class = "form-control", placeholder = "State *" })
                                         @Html.ValidationMessageFor(m => m.State)
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        @Html.LabelFor(m => m.TruckTypeId)<span style="color:red">*</span>
                                         @Html.DropDownListFor(m => m.TruckTypeId, Model.TruckTypes, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(m => m.TruckTypeId)
                                     </div>
@@ -105,12 +99,14 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        @Html.LabelFor(m => m.TruckMake)<span style="color:red">*</span>
                                         @Html.TextBoxFor(m => m.TruckMake, new { @class = "form-control", placeholder = "Truck Make *" })
                                         @Html.ValidationMessageFor(m => m.TruckMake)
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        @Html.LabelFor(m => m.TruckModel)<span style="color:red">*</span>
                                         @Html.TextBoxFor(m => m.TruckModel, new { @class = "form-control", placeholder = "Truck Model *" })
                                         @Html.ValidationMessageFor(m => m.TruckModel)
                                     </div>
@@ -119,12 +115,14 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        @Html.LabelFor(m => m.TruckYear)<span style="color:red">*</span>
                                         @Html.TextBoxFor(m => m.TruckYear, new { @class = "form-control", placeholder = "Truck Year *" })
                                         @Html.ValidationMessageFor(m => m.TruckYear)
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        @Html.LabelFor(m => m.LicensePlate)<span style="color:red">*</span>
                                         @Html.TextBoxFor(m => m.LicensePlate, new { @class = "form-control", placeholder = "License Plate *" })
                                         @Html.ValidationMessageFor(m => m.LicensePlate)
                                     </div>
@@ -133,12 +131,14 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        @Html.LabelFor(m => m.TruckColor)<span style="color:red">*</span>
                                         @Html.TextBoxFor(m => m.TruckColor, new { @class = "form-control", placeholder = "Truck Color *" })
                                         @Html.ValidationMessageFor(m => m.TruckColor)
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        @Html.LabelFor(m => m.DriverLicenseNumber)<span style="color:red">*</span>
                                         @Html.TextBoxFor(m => m.DriverLicenseNumber, new { @class = "form-control", placeholder = "Driver License Number *" })
                                         @Html.ValidationMessageFor(m => m.DriverLicenseNumber)
                                     </div>
@@ -147,12 +147,14 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        @Html.LabelFor(m => m.VehicleRegNumber)<span style="color:red">*</span>
                                         @Html.TextBoxFor(m => m.VehicleRegNumber, new { @class = "form-control", placeholder = "Vehicle Registration Number *" })
                                         @Html.ValidationMessageFor(m => m.VehicleRegNumber)
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        @Html.LabelFor(m => m.DriverInsurancePolicy)<span style="color:red">*</span>
                                         @Html.TextBoxFor(m => m.DriverInsurancePolicy, new { @class = "form-control", placeholder = "Driver Insurance Policy Number *" })
                                         @Html.ValidationMessageFor(m => m.DriverInsurancePolicy)
                                     </div>
@@ -160,24 +162,16 @@
                             </div>
                             <div class="log-btn">
                                 <div class="form-group">
-                                    <button type="submit" class="btn btn-default">Sign up</button>
+                                    <button type="submit" class="btn btn-default">Save Changes</button>
                                 </div>
                             </div>
                         }
-                    </div>
-                    <div class="create-ac">
-                        <p>Have an account? <a href="@Url.Action("Login", "Home")">Sign In</a></p>
-                    </div>
-                    <div class="login-menu">
-                        <a href="@Url.Action("About", "Home")">About</a>
-                        <span>|</span>
-                        <a href="@Url.Action("Contact", "Home")">Contact</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</section>
+</div>
 <!--== Become Driver Content End ==-->
 
 @section Scripts
@@ -187,8 +181,9 @@
             $('#Phone').keyup(function () {
                 $(this).val($(this).val().replace(/(\d{3})\-?(\d{3})\-?(\d{4})/, '$1-$2-$3'))
             });
-            $('nav.mainmenu ul li.active').removeClass('active');
-            $("#becomeDriverLink").addClass('active');
+
+            $('#myMenu.nav.nav-tabs li.nav-item.active').removeClass('active');
+            $("#menu_item_2").parent("li").addClass('active');
         });
     </script>
 }
