Removed Wallet Tabs in both profiles

--- a/SmartMoveWebApp/Views/Shared/_CustomersLayout.cshtml
+++ b/SmartMoveWebApp/Views/Shared/_CustomersLayout.cshtml
@@ -74,11 +74,11 @@
                                                 <h5>Profile</h5>
                                             </a>
                                         </li>
-                                        <li class="nav-item">
+                                        @*<li class="nav-item">
                                             <a class="nav-link" id="menu_item_3" href="@Url.Action("Wallet", "Customers")" aria-selected="false">
                                                 <h5>Wallet</h5>
                                             </a>
-                                        </li>
+                                        </li>*@
                                         <li class="nav-item">
                                             <a class="nav-link" id="menu_item_4" href="@Url.Action("Share", "Customers")" aria-selected="false">
                                                 <h5>Share With Friend</h5>
