--- a/SmartMoveWebApp/Views/Shared/_TruckOwnersLayout.cshtml
+++ b/SmartMoveWebApp/Views/Shared/_TruckOwnersLayout.cshtml
@@ -74,11 +74,11 @@
                                                 <h5>Profile</h5>
                                             </a>
                                         </li>
-                                        <li class="nav-item">
+                                        @*<li class="nav-item">
                                             <a class="nav-link" id="menu_item_3" href="@Url.Action("Payment", "TruckOwners")" aria-selected="false">
                                                 <h5>Payment Type</h5>
                                             </a>
-                                        </li>
+                                        </li>*@
                                         <li class="nav-item">
                                             <a class="nav-link" id="menu_item_4" href="@Url.Action("ShareWithFriend", "TruckOwners")" aria-selected="false">
                                                 <h5>Share With Friend</h5>
